# file-serve

./: Cargo.toml  LICENSE  README.md
src/: main.rs  utils.rs
templates/: error.html  index.html
